# SCU_CPP_CNN

./: CMakeLists.txt  HWDR.sln  HWDR.vcxproj  HWDR.vcxproj.filters  README.md  activation_function.cpp  activation_function.hpp  chr_cnn.cpp  chr_cnn.hpp  cnn_base.cpp  cnn_base.h  convolve_layer.cpp  convolve_layer.hpp  filter.cpp  filter.hpp  full_connect_layer.cpp  full_connect_layer.hpp  graphicscore.cpp  graphicscore.h  graphicscore.ui  image_process.cpp  image_process.hpp  language_manager.cpp  le_net5.cpp  le_net5.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mnist_data.cpp  mnist_data.hpp  pool_layer.cpp  pool_layer.hpp  resource.rc  ui_form.cpp  ui_form.hpp  vgg16.cpp  vgg16.hpp
